fix classname, better spacing for print CV

--- a/src/assets/scss/layout/_about.scss
+++ b/src/assets/scss/layout/_about.scss
@@ -14,9 +14,13 @@
 
     .text {
       flex: 2;
+
+      p{
+          margin-bottom: 0.5em;
+      }
     }
     .cv-portrait {
-      padding: 0 20px 0 20px;
+      padding-left: 20px;
       flex: 1;
       max-width: 100%;
       width: 400px;
@@ -72,7 +76,7 @@
 }
 
 @media print {
-    #header, #contact{
+    #header, #contact, .timeline-container {
         display: none;
     }
     body, #main{
@@ -98,7 +102,7 @@
       }
 
       .print-info{
-            display: block;
+            display: flex;
         }
   
         //background: none;
